@@ -9,6 +9,7 @@
 - Added template graphs
 - New NXSL functions: mktime, GetSyslogRuleCheckCount, GetSyslogRuleMatchCount
 - New NXSL "Node" class attributes: isInMaintenanceMode, lastAgentCommTime
+- Access to object's alarms in NXSL via "alarms" attribute in "NetObj" class
 - Operator "new" in NXSL which can be used to instantiate objects if object class supports it
 - H3C driver correctly reads IPv6 addresses on interfaces
 - SMS driver for Nexmo service
